--- a/crewai-stocks.ipynb
+++ b/crewai-stocks.ipynb
@@ -5,14 +5,19 @@
    "metadata": {},
    "source": [
     "# Instalação\n",
-    "- pip install yfinance\n",
-    "- !pip install crewai\n",
-    "- pip install 'crewai[tools]' "
+    "#INSTALAÇÃO DAS LIBS\n",
+    "- !pip install yfinance==0.2.41\n",
+    "- !pip install crewai==0.28.8\n",
+    "- !pip install 'crewai[tools]'\n",
+    "- !pip install langchain==0.1.20\n",
+    "- !pip install langchain-openai==0.1.7\n",
+    "- !pip install langchain-community==0.0.38\n",
+    "- !pip install duckduckgo-search==5.3.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,15 +30,18 @@
     "\n",
     "from crewai import Agent, Task\n",
     "\n",
-    "from langchain.tools import Tool"
+    "from langchain.tools import Tool\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain_community.tools import DuckDuckGoSearchResults"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Criando yahoo finance tool\n",
     "def fetch_stock_price(ticket):\n",
     "    stock = yf.download(ticket, start=\"2023-08-08\", end=\"2024-08-08\")\n",
     "    return stock\n",
@@ -48,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -65,10 +73,10 @@
       "                  Open        High         Low       Close   Adj Close  \\\n",
       "Date                                                                     \n",
       "2023-08-08  179.690002  180.270004  177.580002  179.800003  178.643402   \n",
-      "2023-08-09  180.869995  180.929993  177.009995  178.190002  177.043777   \n",
-      "2023-08-10  179.479996  180.750000  177.600006  177.970001  176.825165   \n",
+      "2023-08-09  180.869995  180.929993  177.009995  178.190002  177.043762   \n",
+      "2023-08-10  179.479996  180.750000  177.600006  177.970001  176.825180   \n",
       "2023-08-11  177.320007  178.619995  176.550003  177.789993  176.884857   \n",
-      "2023-08-14  177.970001  179.690002  177.309998  179.460007  178.546356   \n",
+      "2023-08-14  177.970001  179.690002  177.309998  179.460007  178.546387   \n",
       "...                ...         ...         ...         ...         ...   \n",
       "2024-08-01  224.369995  224.479996  217.020004  218.360001  218.107544   \n",
       "2024-08-02  219.149994  225.600006  217.710007  219.860001  219.605804   \n",
@@ -103,6 +111,131 @@
    ],
    "source": [
     "print(fetch_stock_price('AAPL'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Importando OpenAI LLM - GPT\n",
+    "os.environ['OPENAI_API_KEY'] = os.getenv('OPENAI_API_KEY')\n",
+    "llm = ChatOpenAI(model=\"gpt-4o\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stockPriceAnalyst = Agent(\n",
+    "    role=\"Senior stock price Analyst\",\n",
+    "    goal=\"Find the {ticket} stock and analyses treds\",\n",
+    "    backstory=\"\"\"You are a highly experienced in analyzing the price of an specif stock\n",
+    "    and make predictions about its future price.\"\"\",\n",
+    "    verbose=True,\n",
+    "    llm=llm,\n",
+    "    max_iter=5,\n",
+    "    tools=[yahoo_finance_tool]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "getStockPrice = Task(\n",
+    "    description=\"Analyze the stock {ticket} price history and create a trend analyses of up, down or sideways\",\n",
+    "    expected_output=\"\"\" Specify the current trend stock price -up, down or sideways.\n",
+    "    eg. stock 'APPL, price UP'\n",
+    "    \"\"\",\n",
+    "    agent=stockPriceAnalyst\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Important a tool de search\n",
+    "\n",
+    "search_tool = DuckDuckGoSearchResults(\n",
+    "    backend='news',\n",
+    "    num_results=10\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newAnalyst = Agent(\n",
+    "    role=\"Stock News Analyst\",\n",
+    "    goal=\"\"\"Create a short summary of the market news related to the stock {ticket} company. Specify the current trend - up, down or sideways\n",
+    "     with the news context. For each request stock asset, specify a number between 0 and 100, where 0 is extreme fear and 100 is extreme greed.\"\"\",\n",
+    "    backstory=\"\"\" You are a highly experienced in analyzing the market trends and news and have tracked assets for more then 10 years.\n",
+    "    \n",
+    "    You are also master level alyts in the tradicional markets and have deep understanding of human psychology.\n",
+    "    \n",
+    "    YOu understand news, theirs tittles and information, but you look at those with a health dose of skepticise.\n",
+    "    You consider also the source of the news articles.\n",
+    "    \"\"\",\n",
+    "    verbose=True,\n",
+    "    llm=llm,\n",
+    "    max_iter=10,\n",
+    "    tools=[search_tool]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_news = Task(\n",
+    "    description=\"\"\"Take the stock and always include BTC to it (if not request).env\n",
+    "    Use the search tool to search each one individually.\n",
+    "    \n",
+    "    the current date is {datetime.now()}.\n",
+    "    \n",
+    "    Compose the results into a helpfull report.\"\"\",\n",
+    "    expected_output=\"\"\"A summary of the overall market and one sentence summary for each request asset.\n",
+    "    Include a fear/greed score for each asset based on the news. Use format:\n",
+    "    <STOCK ASSET>\n",
+    "    <SUMMARY BASED ON NEWS>\n",
+    "    <TREND PREDICTION>\n",
+    "    <FEAR/GREED SCORE>\n",
+    "    \"\"\",\n",
+    "    agent=newAnalyst\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stockAnalystWrite = Agent(\n",
+    "    role=\"Senior Stock Analyts Writer\",\n",
+    "    goal=\"\"\"Analyze the trends price, news and write an insighfull compelling and informative 3 paragraph long newsletter based on the stock report and price trend.\"\"\",\n",
+    "    backstory=\"\"\"You are widely accepted as the best stock analyst in the market. You understand complex concepts and create compelling stories\n",
+    "    and narratives that resonate with wider audiences.\n",
+    "    \n",
+    "    You understand macro factors and combine multiple theories - eg. cycle theory and fundamental analyses. you are able to hold multpli opinions when analyzing anything.\n",
+    "    \"\"\"\n",
+    ")"
    ]
   }
  ],
