--- a/crewai-stocks.ipynb
+++ b/crewai-stocks.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "\n",
     "import yfinance as yf\n",
     "\n",
-    "from crewai import Agent, Task\n",
+    "from crewai import Agent, Task, Crew, Process\n",
     "\n",
     "from langchain.tools import Tool\n",
     "from langchain_openai import ChatOpenAI\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -72,9 +72,9 @@
      "text": [
       "                  Open        High         Low       Close   Adj Close  \\\n",
       "Date                                                                     \n",
-      "2023-08-08  179.690002  180.270004  177.580002  179.800003  178.643402   \n",
-      "2023-08-09  180.869995  180.929993  177.009995  178.190002  177.043762   \n",
-      "2023-08-10  179.479996  180.750000  177.600006  177.970001  176.825180   \n",
+      "2023-08-08  179.690002  180.270004  177.580002  179.800003  178.643387   \n",
+      "2023-08-09  180.869995  180.929993  177.009995  178.190002  177.043777   \n",
+      "2023-08-10  179.479996  180.750000  177.600006  177.970001  176.825165   \n",
       "2023-08-11  177.320007  178.619995  176.550003  177.789993  176.884857   \n",
       "2023-08-14  177.970001  179.690002  177.309998  179.460007  178.546387   \n",
       "...                ...         ...         ...         ...         ...   \n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,13 +140,14 @@
     "    verbose=True,\n",
     "    llm=llm,\n",
     "    max_iter=5,\n",
-    "    tools=[yahoo_finance_tool]\n",
-    "    )"
+    "    tools=[yahoo_finance_tool],\n",
+    "    allow_delegation=False,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,13 +194,14 @@
     "    verbose=True,\n",
     "    llm=llm,\n",
     "    max_iter=10,\n",
-    "    tools=[search_tool]\n",
+    "    tools=[search_tool],\n",
+    "    allow_delegation=False,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,9 +235,76 @@
     "    backstory=\"\"\"You are widely accepted as the best stock analyst in the market. You understand complex concepts and create compelling stories\n",
     "    and narratives that resonate with wider audiences.\n",
     "    \n",
-    "    You understand macro factors and combine multiple theories - eg. cycle theory and fundamental analyses. you are able to hold multpli opinions when analyzing anything.\n",
-    "    \"\"\"\n",
+    "    You understand macro factors and combine multiple theories - eg. cycle theory and fundamental analyses. You are able to hold multple opinions when analyzing anything.\n",
+    "    \"\"\",\n",
+    "    verbose=True,\n",
+    "    llm=llm,\n",
+    "    max_iter=5,\n",
+    "    memory=True,\n",
+    "    allow_delegation=True,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "writeAnalyses = Task(\n",
+    "    description=\"\"\"Use the stock price trend and the stock news report to create an analyses and write about the stock {ticket} company that is \n",
+    "    brief and highlights the most important aspects of the stock.\n",
+    "    Focus on the stock price trend, news and fear/greed score. What are the near future considerations?\n",
+    "    Include the previous anlyses of stock trend and news summary.\n",
+    "    \"\"\",\n",
+    "    expected_output=\"\"\"An eloquent 3 paragraphs newsletter formated as markdown in a easy readble manner. It should contain:\n",
+    "    \n",
+    "    - 3 bullets executive summary\n",
+    "    - Introduction - set the overall picture and spike up the interest\n",
+    "    - main part provides the meat of the analysis including the news summary and fead/greed scores\n",
+    "    - summary - key facts and concrete future trends prediction - up, down or sideways\"\"\",\n",
+    "    agent=stockAnalystWrite,\n",
+    "    context=[getStockPrice, get_news]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crew = Crew(\n",
+    "    agents=[stockPriceAnalyst, newAnalyst, stockAnalystWrite],\n",
+    "    tasks=[getStockPrice, get_news, writeAnalyses],\n",
+    "    verbose=2,\n",
+    "    process= Process.hierarchical,\n",
+    "    full_output=True,\n",
+    "    share_crew=False,\n",
+    "    manager_llm=llm,\n",
+    "    max_iter=15\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'datetime.datetime' has no attribute 'datetime'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m results \u001b[38;5;241m=\u001b[39m crew\u001b[38;5;241m.\u001b[39mkickoff(inputs\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mticket\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAAPL\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatetime\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[43mdatetime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdatetime\u001b[49m\u001b[38;5;241m.\u001b[39mnow()})\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'datetime.datetime' has no attribute 'datetime'"
+     ]
+    }
+   ],
+   "source": [
+    "results = crew.kickoff(inputs={\"ticket\": \"AAPL\"})"
    ]
   }
  ],
