chore: Update dependencies for stock analysis and news retrieval

--- a/crewai-stocks.ipynb
+++ b/crewai-stocks.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,9 @@
     "\n",
     "from langchain.tools import Tool\n",
     "from langchain_openai import ChatOpenAI\n",
-    "from langchain_community.tools import DuckDuckGoSearchResults"
+    "from langchain_community.tools import DuckDuckGoSearchResults\n",
+    "\n",
+    "from IPython.display import display, Markdown"
    ]
   },
   {
@@ -1270,6 +1272,83 @@
    ],
    "source": [
     "results = crew.kickoff(inputs={\"ticket\": \"AAPL\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['final_output', 'tasks_outputs']"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(results.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(results['tasks_outputs'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "**Apple Inc. (AAPL) Market Newsletter**\n",
+       "\n",
+       "- **Resumo Executivo:**\n",
+       "  - AAPL enfrenta uma tendência lateral a ligeiramente descendente devido a problemas de lançamento de produtos e questões na cadeia de suprimentos.\n",
+       "  - O sentimento do mercado é neutro, com um índice de medo/ganância de 60, indicando otimismo moderado com cautela.\n",
+       "  - O relatório de ganhos do Q4 e a resolução dos problemas na cadeia de suprimentos serão cruciais para o desempenho futuro das ações.\n",
+       "\n",
+       "**Introdução:**\n",
+       "Atualmente, os mercados financeiros estão navegando por um cenário complexo caracterizado por sinais mistos em diferentes classes de ativos. Enquanto ações tradicionais como AAPL estão passando por períodos de consolidação e incerteza, outras classes de ativos, como criptomoedas, estão em fases de alta. Essa dualidade destaca a importância de estratégias de investimento diversificadas e um olhar atento tanto para fatores macroeconômicos quanto para desenvolvimentos específicos de ativos.\n",
+       "\n",
+       "**Análise Principal:**\n",
+       "A Apple Inc. está enfrentando uma tendência lateral a ligeiramente descendente devido a relatórios mistos sobre lançamentos de produtos e problemas contínuos na cadeia de suprimentos. O sentimento em torno da AAPL é neutro, com um índice de sentimento de mercado de 50, indicando uma abordagem de espera e observação entre os investidores. Reações mistas ao lançamento do iPhone 15 e as contínuas interrupções na cadeia de suprimentos são influências principais que dirigem essa tendência. A antecipação em torno do próximo relatório de ganhos do Q4 adiciona outra camada de incerteza, tornando crucial para os investidores ficarem informados sobre possíveis resoluções desses problemas de cadeia de suprimentos e quaisquer novos desenvolvimentos no desempenho dos produtos.\n",
+       "\n",
+       "**Resumo:**\n",
+       "Olhando para o futuro, a perspectiva de curto prazo para a AAPL sugere uma consolidação contínua com riscos potenciais de baixa se os problemas na cadeia de suprimentos persistirem ou se os próximos lançamentos de produtos não atenderem às expectativas do mercado. Os investidores devem monitorar de perto os relatórios de ganhos e quaisquer atualizações sobre as resoluções na cadeia de suprimentos para avaliar o desempenho futuro. Apesar da atual volatilidade, a análise de sentimento coloca a AAPL em um índice de medo/ganância de 60, indicando otimismo moderado com cautela. Ao sintetizar esses insights, os investidores podem navegar melhor a dinâmica atual do mercado e tomar decisões informadas, entendendo que os próximos meses serão cruciais para determinar a direção futura das ações."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Markdown(results['final_output'])"
    ]
   }
  ],
